compiler/tests/success/arm-m4/intrinsic_smulw_hw.jazz
export
fn smulw_hw(reg u32 x y) -> reg u32 {
    reg u32 r;
    r = #SMULWB(x, y);
    r = #SMULWT(r, y);

    reg bool b;
    ?{ "<s" = b } = #CMP(r, y);
    r = #SMULWBcc(r, y, b, r);
    r = #SMULWTcc(r, y, b, r);

    r = r;
    return r;
}
