compiler/tests/fail/typing/x86-64/flags_not_bool.jazz
export fn main(reg u64 x) {
  reg bool o c s p z;
  o, c, s, p, z = #CMP(x, x);
  p = _EQ(o, c, x, z);
}
